update: portal role permissions and admin lazy dashboard loading

--- a/src/app/modules/portal/pages/platforms/components/platform-balance-info/platform-balance-info.component.html
+++ b/src/app/modules/portal/pages/platforms/components/platform-balance-info/platform-balance-info.component.html
@@ -30,6 +30,12 @@
     }}</span>
   </p>
 </div>
-<app-button type="button" color="neutral" (click)="handleEditing()"
-  >Editar Saldos</app-button
+<app-button
+  type="button"
+  color="neutral"
+  (click)="handleEditing()"
+  [disabled]="!canEdit()"
+  *ngIf="canEdit()"
 >
+  Editar Saldos
+</app-button>
