update: home info and platforms page description

--- a/src/app/modules/portal/pages/platforms/platforms.component.html
+++ b/src/app/modules/portal/pages/platforms/platforms.component.html
@@ -1,7 +1,7 @@
 <app-header-title
   hTitle="Plataformas"
   hDescription="Listado de todas las plataformas con sus saldos del día"
-  hDescriptionSecondLine="Eres libre de editarlos y añadir transferencias"
+  [hDescriptionSecondLine]="description"
 ></app-header-title>
 <section class="w-full grid grid-cols-3 gap-x-5">
   <article class="card col-span-1">
