--- a/src/app/modules/portal/pages/home/home.component.html
+++ b/src/app/modules/portal/pages/home/home.component.html
@@ -1,19 +1,22 @@
-<section
-  *ngIf="open() === false; else home"
-  class="h-[calc(100vh-4rem)] flex items-center justify-center"
->
-  <div class="">
-    <h2 class="mb-3 text-3xl text-gray-700 font-medium">
-      Parece no tienes cajas
-    </h2>
-    <p class="mb-5 text-lg text-gray-700">
-      Abre una caja registradora para hacer transacciones
-    </p>
-    <app-button type="button" (click)="goToOpenCash()">Abrir caja</app-button>
-  </div>
-</section>
-<ng-template #home>
-  <app-home-nav />
-  <div class="divider my-7"></div>
-  <router-outlet />
-</ng-template>
+<ng-container *ngIf="open() !== undefined">
+  <section
+    *ngIf="open() === false; else home"
+    class="h-[calc(100vh-5.5rem)] flex items-center justify-center"
+  >
+    <div class="bg-white rounded-2xl px-8 py-10 drop-shadow-xl">
+      <h2 class="mb-3 text-3xl text-gray-700 font-medium">
+        Parece que <span class="text-red-700">no tienes cajas</span>
+      </h2>
+      <p class="mb-8 text-lg text-gray-700">
+        <span class="text-green-700 font-medium">Abre una caja</span> para hacer
+        transacciones
+      </p>
+      <app-button type="button" (click)="goToOpenCash()">Abrir caja</app-button>
+    </div>
+  </section>
+  <ng-template #home>
+    <app-home-nav />
+    <div class="divider my-7"></div>
+    <router-outlet />
+  </ng-template>
+</ng-container>
