fix: some bugs and update some designs

--- a/src/app/modules/portal/pages/cash-registers/pages/my-cash-registers/my-cash-registers.component.html
+++ b/src/app/modules/portal/pages/cash-registers/pages/my-cash-registers/my-cash-registers.component.html
@@ -132,7 +132,7 @@
       [icon]="faRefresh"
       type="button"
       (click)="refresh()"
-      [loading]="refreshLoading()"
+      [spinner]="refreshLoading()"
     />
   </div>
   <div class="col-span-3 flex items-center justify-center gap-7">
