--- a/src/app/modules/shared/components/icon-button/icon-button.component.html
+++ b/src/app/modules/shared/components/icon-button/icon-button.component.html
@@ -5,7 +5,7 @@
   [loading]="loading"
 >
   <div class="flex items-center gap-3">
-    <fa-icon [icon]="icon" />
+    <fa-icon [icon]="icon" [animation]="spinner ? 'spin' : undefined" />
     <ng-content></ng-content>
   </div>
 </app-button>
