update: select last cash register

--- a/src/app/modules/portal/pages/cash-registers/pages/my-cash-registers/my-cash-registers.component.html
+++ b/src/app/modules/portal/pages/cash-registers/pages/my-cash-registers/my-cash-registers.component.html
@@ -84,6 +84,7 @@
             let report of myCashRegisters()?.cashRegisterDetailsReports;
             index as i
           "
+          [selected]="i === currentCashRegisterIndex()"
         >
           Caja {{ report.cashRegisterDetail.cashRegister.numeral }}
         </option>
