--- a/src/app/modules/admin/pages/home/home.component.css
+++ b/src/app/modules/admin/pages/home/home.component.css
@@ -2,6 +2,6 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
     gap: 3rem;
-    max-width: 45rem;
-    margin: 0 auto;
+    max-width: 60rem;
+    margin: 3rem auto;
 }
