--- a/src/app/modules/admin/pages/home/home.component.html
+++ b/src/app/modules/admin/pages/home/home.component.html
@@ -2,9 +2,29 @@
   hTitle="Bienvenido"
   hDescription="Visualiza y actualiza todos tus productos"
 />
-<div class="container">
-  <app-product-card pTitle="Plataformas" [pIcon]="faPlatforms" />
-  <app-product-card pTitle="Cajas Registradoras" [pIcon]="faCashRegister" />
-  <app-product-card pTitle="Cajas Fuertes" [pIcon]="faCashSafe" />
-  <app-product-card pTitle="Usuarios" [pIcon]="faUser" />
-</div>
+<ul class="container">
+  <li>
+    <app-product-card
+      pTitle="Plataformas"
+      [pIcon]="faPlatforms"
+      pRoute="../plataformas"
+    />
+  </li>
+  <li>
+    <app-product-card
+      pTitle="Cajas Registradoras"
+      [pIcon]="faCashRegister"
+      pRoute="../cajas-registradoras"
+    />
+  </li>
+  <li>
+    <app-product-card
+      pTitle="Cajas Fuertes"
+      [pIcon]="faCashSafe"
+      pRoute="../cajas-fuertes"
+    />
+  </li>
+  <li>
+    <app-product-card pTitle="Usuarios" [pIcon]="faUser" pRoute="../usuarios" />
+  </li>
+</ul>
