--- a/src/app/modules/admin/pages/cash-registers/cash-registers.component.html
+++ b/src/app/modules/admin/pages/cash-registers/cash-registers.component.html
@@ -1,12 +1,14 @@
 <app-header-title
-  hTitle="Cajas"
-  hDescription="Administra las cajas fuertes y registradoras"
-></app-header-title>
-<section class="mt-10">
-  <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
-    <h3 class="text-2xl text-gray-700 font-medium mb-3">
-      Registro de caja registradora
-    </h3>
-    <app-new-cash-register-form></app-new-cash-register-form>
-  </div>
-</section>
+  hTitle="Cajas registradoras"
+  hDescription="Administra las cajas registradoras"
+/>
+<div class="mt-10 grid grid-cols-3 gap-5">
+  <article class="card col-span-1 min-w-[19rem]">
+    <h3 class="text-2xl text-gray-700 font-medium mb-3">Registro de caja</h3>
+    <app-new-cash-register-form />
+  </article>
+  <article class="card col-span-2">
+    <h3 class="text-2xl text-gray-700 font-medium mb-3">Listado de cajas</h3>
+    <app-cash-registers-table />
+  </article>
+</div>
