--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,36 +1,6 @@
 <app-main-stats />
-<ul
-  class="flex justify-center items-center gap-5 text-gray-700 bg-violet-100 text-lg rounded-md"
->
-  <li
-    class="px-2.5 py-3 cursor-pointer hover:bg-violet-200"
-    [ngClass]="{
-      'font-medium': selectedProduct() === 'platforms'
-    }"
-    (click)="handleSelectedProduct('platforms')"
-  >
-    Plataformas
-  </li>
-  <li
-    class="px-2.5 py-3 cursor-pointer hover:bg-violet-200"
-    [ngClass]="{
-      'font-medium': selectedProduct() === 'cash-registers'
-    }"
-    (click)="handleSelectedProduct('cash-registers')"
-  >
-    Cajas Registradoras
-  </li>
-  <li
-    class="px-2.5 py-3 cursor-pointer hover:bg-violet-200"
-    [ngClass]="{
-      'font-medium': selectedProduct() === 'safes'
-    }"
-    (click)="handleSelectedProduct('safes')"
-  >
-    Cajas Fuertes
-  </li>
-</ul>
-<section class="bg-violet-100 px-5 py-8">
+<app-select-product-bar />
+<section class="bg-violet-100 px-5 py-8 rounded-b-md">
   <app-platforms-stats *ngIf="selectedProduct() === 'platforms'" />
   <app-cash-registers-stats *ngIf="selectedProduct() === 'cash-registers'" />
   <app-safes-stats *ngIf="selectedProduct() === 'safes'" />
