remove: select product bar and update dashboard design

--- a/src/app/modules/admin/pages/dashboard/components/platforms-stats/platforms-stats.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/platforms-stats/platforms-stats.component.html
@@ -1,1 +1,24 @@
-<p>platforms-stats works!</p>
+<div class="table">
+  <table>
+    <thead>
+      <tr>
+        <th class="w-20">ID</th>
+        <th>Nombre</th>
+        <th>Saldo Inicial</th>
+        <th>Saldo Final</th>
+        <th>Traslados</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
