--- a/src/app/modules/admin/pages/dashboard/components/safes-stats/safes-stats.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/safes-stats/safes-stats.component.html
@@ -1,1 +1,22 @@
-<p>safes-stats works!</p>
+<div class="table">
+  <table>
+    <thead>
+      <tr>
+        <th class="w-20">ID</th>
+        <th class="w-20">Número</th>
+        <th>Transferencias</th>
+        <th>Base Inicial</th>
+        <th>Base Final</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
