--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,7 +1,1 @@
-<app-main-stats />
-<app-select-product-bar />
-<section class="bg-violet-100 px-5 py-8 rounded-b-md">
-  <app-platforms-stats *ngIf="selectedProduct() === 'platforms'" />
-  <app-cash-registers-stats *ngIf="selectedProduct() === 'cash-registers'" />
-  <app-safes-stats *ngIf="selectedProduct() === 'safes'" />
-</section>
+<app-main-stats /> <app-secondary-stats />
