--- a/src/app/modules/admin/pages/dashboard/components/platforms-stats/platforms-stats.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/platforms-stats/platforms-stats.component.html
@@ -7,17 +7,25 @@
         <th>Saldo Inicial</th>
         <th>Saldo Final</th>
         <th>Traslados</th>
+        <th>Total transferido</th>
         <th>Total</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+      <tr *ngFor="let platform of dashboard()?.platformsStats">
+        <td>{{ platform.platformId }}</td>
+        <td>{{ platform.platformName }}</td>
+        <td>
+          {{ platform.initialBalance | currency : "symbol" : "$" : "0.00" }}
+        </td>
+        <td>
+          {{ platform.finalBalance | currency : "symbol" : "$" : "0.00" }}
+        </td>
+        <td>{{ platform.transfersAmount }}</td>
+        <td>
+          {{ platform.transfersTotal | currency : "symbol" : "$" : "0.00" }}
+        </td>
+        <td>{{ platform.total | currency : "symbol" : "$" : "0.00" }}</td>
       </tr>
     </tbody>
   </table>
