--- a/src/app/modules/admin/pages/dashboard/components/secondary-stats/secondary-stats.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/secondary-stats/secondary-stats.component.html
@@ -1,9 +1,14 @@
 <section class="space-y-3 px-2">
   <h2 class="text-3xl text-gray-700 font-medium text-center">Totales</h2>
   <div class="stats text-gray-700">
-    <article class="card cursor-pointer">
+    <article class="card cursor-pointer" (click)="openPlatforms()">
       <h3 class="text-lg">Plataformas</h3>
-      <p class="text-right text-2xl">$0</p>
+      <p class="text-right text-2xl">
+        {{
+          dashboard()?.platformBalancesTotal ?? 0
+            | currency : "symbol" : "$" : "0.00"
+        }}
+      </p>
     </article>
     <article class="card cursor-pointer">
       <h3 class="text-lg">Cajas Registradoras</h3>
@@ -15,3 +20,17 @@
     </article>
   </div>
 </section>
+<dialog
+  #platformsModal
+  class="px-4 py-5 rounded-lg outline-none backdrop:bg-black backdrop:bg-opacity-30 backdrop:backdrop-blur-sm"
+>
+  <header class="mb-5 border-b border-gray-400 pb-2">
+    <h2 class="text-center text-gray-800 text-3xl font-medium">Plataformas</h2>
+  </header>
+  <app-platforms-stats />
+  <footer
+    class="flex items-center justify-end mt-7 border-t border-gray-400 pt-5"
+  >
+    <app-button type="button" (click)="closePlatforms()">Cerrar</app-button>
+  </footer>
+</dialog>
