--- a/src/app/modules/admin/pages/dashboard/components/platforms-modal/platforms-modal.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/platforms-modal/platforms-modal.component.html
@@ -1,5 +1,5 @@
 <dialog
-  #platformsModal
+  #modal
   class="px-4 py-5 rounded-lg outline-none backdrop:bg-black backdrop:bg-opacity-30 backdrop:backdrop-blur-sm"
 >
   <header class="mb-5 border-b border-gray-400 pb-2">
