--- a/src/app/modules/admin/pages/dashboard/components/secondary-stats/secondary-stats.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/secondary-stats/secondary-stats.component.html
@@ -12,11 +12,18 @@
     </article>
     <article class="card cursor-pointer">
       <h3 class="text-lg">Cajas Registradoras</h3>
-      <p class="text-right text-2xl">$0</p>
+      <p class="text-right text-2xl">
+        {{
+          dashboard()?.cashRegistersTotal ?? 0
+            | currency : "symbol" : "$" : "0.00"
+        }}
+      </p>
     </article>
     <article class="card cursor-pointer hover:scale-105">
       <h3 class="text-lg">Cajas Fuertes</h3>
-      <p class="text-right text-2xl">$0</p>
+      <p class="text-right text-2xl">
+        {{ dashboard()?.safesTotal ?? 0 | currency : "symbol" : "$" : "0.00" }}
+      </p>
     </article>
   </div>
 </section>
