feat: display cash registers stats as a modal

--- a/src/app/modules/admin/pages/dashboard/components/secondary-stats/secondary-stats.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/secondary-stats/secondary-stats.component.html
@@ -10,7 +10,7 @@
         }}
       </p>
     </article>
-    <article class="card cursor-pointer">
+    <article class="card cursor-pointer" (click)="openCashRegisters()">
       <h3 class="text-lg">Cajas Registradoras</h3>
       <p class="text-right text-2xl">
         {{
@@ -28,3 +28,4 @@
   </div>
 </section>
 <app-platforms-modal />
+<app-cash-registers-modal />
