--- a/src/app/modules/admin/pages/dashboard/components/safes-stats-table/safes-stats-table.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/safes-stats-table/safes-stats-table.component.html
@@ -15,10 +15,10 @@
         <td class="text-center">{{ safe.numeral }}</td>
         <td class="text-center">0</td>
         <td class="text-right">
-          {{ safe.initialBase | currency : "symbol" : "$" : "0.00" }}
+          {{ 0 | currency : "symbol" : "$" : "0.00" }}
         </td>
         <td class="text-right">
-          {{ safe.finalBase | currency : "symbol" : "$" : "0.00" }}
+          {{ 0 | currency : "symbol" : "$" : "0.00" }}
         </td>
       </tr>
     </tbody>
