update: hover bg

--- a/src/app/modules/admin/pages/administration/administration.component.html
+++ b/src/app/modules/admin/pages/administration/administration.component.html
@@ -13,7 +13,7 @@
           <a
             class="text-gray-800 text-lg flex items-center px-3 py-1.5 rounded-lg hover:bg-violet-100"
             routerLink="cajas-fuertes"
-            routerLinkActive="bg-violet-200 text-gray-900"
+            routerLinkActive="bg-violet-200 text-gray-900 hover:bg-violet-200"
             >Cajas Fuertes</a
           >
         </li>
@@ -21,7 +21,7 @@
           <a
             class="text-gray-800 text-lg flex items-center px-3 py-1.5 rounded-lg hover:bg-violet-100"
             routerLink="cajas-registradoras"
-            routerLinkActive="bg-violet-200 text-gray-900"
+            routerLinkActive="bg-violet-200 text-gray-900 hover:bg-violet-200"
             >Cajas Registradoras</a
           >
         </li>
