--- a/src/app/modules/admin/pages/administration/pages/safes/safes.component.html
+++ b/src/app/modules/admin/pages/administration/pages/safes/safes.component.html
@@ -1,3 +1,13 @@
 <header class="mb-3">
   <h3 class="text-xl text-gray-700 font-medium">Cajas Fuertes</h3>
 </header>
+<ul>
+  <li *ngFor="let detail of safeDetails()">
+    <article class="card">
+      <h4 class="text-xl text-violet-700 font-medium">
+        {{ detail.safe.numeral }}
+      </h4>
+      <p>Saldo Final</p>
+    </article>
+  </li>
+</ul>
