--- a/src/app/modules/admin/pages/administration/pages/safes/safes.component.html
+++ b/src/app/modules/admin/pages/administration/pages/safes/safes.component.html
@@ -8,7 +8,7 @@
         <h4 class="text-2xl text-violet-700 font-medium">
           Caja {{ detail.safe.numeral }}
         </h4>
-        <div class="relative z-10 inline-block">
+        <div class="relative z-10">
           <fa-icon
             [icon]="faOptions"
             size="xl"
@@ -16,8 +16,8 @@
             (click)="toggleShowDropdown(i)"
           />
           <ul
-            class="absolute z-50 bg-white drop-shadow right-0 rounded-lg py-2 min-w-40 flex flex-col gap-0.5"
-            [ngClass]="{ hidden: !showDropdown()[i] }"
+            class="absolute z-20 bg-white drop-shadow right-0 rounded-lg py-2 min-w-40 flex flex-col gap-0.5"
+            [ngClass]="showDropdown()[i] ? 'block' : 'hidden'"
           >
             <li>
               <a
