feat: link update safe base endpoint with safe base calculator

--- a/src/app/modules/admin/pages/administration/pages/safes/components/update-base-form/update-base-form.component.html
+++ b/src/app/modules/admin/pages/administration/pages/safes/components/update-base-form/update-base-form.component.html
@@ -31,7 +31,7 @@
         <input
           type="number"
           [id]="base.title"
-          class="input max-w-44"
+          class="input max-w-48"
           [formControlName]="base.title"
           placeholder="0"
         />
@@ -45,4 +45,5 @@
       </div>
     </div>
   </div>
+  <input type="submit" value="send" class="sr-only" />
 </form>
