update: styles and create transaction components

--- a/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
+++ b/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-3 gap-7 w-full">
+<div class="home-container">
   <section class="card col-span-1">
     <h2 class="font-medium text-2xl text-gray-700 mb-3">Nuevo Gasto</h2>
     <app-new-expense-form />
