--- a/src/styles.css
+++ b/src/styles.css
@@ -109,3 +109,7 @@ body {
 .table > table tbody tr td.actions > div .remove {
   @apply text-red-500 hover:text-red-600;
 }
+
+.home-container {
+  @apply grid grid-cols-3 gap-7 w-full;
+}
