--- a/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
+++ b/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
@@ -1,10 +1,10 @@
 <div class="home-container">
   <section class="card col-span-1">
-    <h2 class="font-medium text-2xl text-gray-700 mb-3">Nuevo Gasto</h2>
+    <h2 class="home-subtitle">Nuevo Gasto</h2>
     <app-new-expense-form />
   </section>
   <section class="card col-span-2">
-    <h2 class="font-medium text-2xl text-gray-700 mb-3">Lista de Gastos</h2>
+    <h2 class="home-subtitle">Lista de Gastos</h2>
     <app-expenses-table />
   </section>
 </div>
