--- a/src/app/modules/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
@@ -1,1 +1,28 @@
-<p>new-transaction-form works!</p>
+<form class="form">
+  <div class="control">
+    <label for="description">Nota</label>
+    <input type="text" class="input" id="description" />
+  </div>
+  <div class="control">
+    <label for="type">Tipo</label>
+    <select class="input" id="type">
+      <option selected>Depósito</option>
+      <option>Retiro</option>
+    </select>
+  </div>
+  <div class="grid grid-cols-2 gap-3">
+    <div class="control">
+      <label for="value">Valor</label>
+      <input type="number" class="input" id="value" />
+    </div>
+    <div class="control">
+      <label for="commission">Adicional</label>
+      <input type="number" id="commission" class="input" />
+    </div>
+  </div>
+  <div class="control">
+    <label for="time">Hora</label>
+    <input type="time" id="time" class="input" />
+  </div>
+  <app-button type="submit" class="mt-3">Guardar Transacción</app-button>
+</form>
