--- a/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
@@ -1,1 +1,6 @@
-<p>transactions works!</p>
+<div class="home-container">
+  <section class="card col-span-1">
+    <h2 class="home-subtitle">Nueva Transacción</h2>
+    <app-new-transaction-form />
+  </section>
+</div>
